---------------------------------------------------------------------------------------------------
Version: 999.999.999
Date: 9999-99-99
  Changes:
  Features:
  Bugfixes:
---------------------------------------------------------------------------------------------------
Version: 2.0.1
Date: 2024-11-06
  Bugfixes:
    - Fixed crash when holding blueprint books (either from inventory or library). Take note blueprint books cannot be used directly for inventory template export/import (unlike in older versions of the mod for game version 1.1).
---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: 2024-11-04
  Changes:
    - Dropped support for game version 1.1.
  Features:
    - Added support for game version 2.0.
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 2023-03-25
  Bugfixes:
    - Fix button tooltips not being readable when holding a named blueprint (due to text overlap).
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2023-03-04
  Bugfixes:
    - Fixed infinity containers with filter capability not being properly detected by the mod.
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2023-03-04
  Features:
    - Added support for linked containers and logistic containers.
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2023-03-03
  Bugfixes:
    - Fixed crash when a player is removed from the game.
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2023-02-28
  Features:
    - Import and export inventory filter configuration using blueprint templates.
    - Clear all inventory filters with a single button click.